<resources>
    <string name="app_name">decisionmakingapp</string>
    <string name="MemeList">meme</string>
    <string name="NormalSet">Normal</string>
    <string name="ball">Magic 8 Ball</string>
    <string name="coin">Coin Flip</string>
    <string name="dice">Dice Roll</string>
    <string name="title_activity_normal_ball">NormalBall</string>
    <string name="tapball">Tap the Ball</string>
    <string name="rollDice">Roll the Die!</string>

    <string-array name="NormalDieArray">
        <item>You rolled a One!</item>
        <item>You rolled a Two!</item>
        <item>You rolled a Three!</item>
        <item>You rolled a Four!</item>
        <item>You rolled a Five!</item>
        <item>You rolled a Six!</item>
    </string-array>

    <string name="memeDie">Despite the fact you rolled a normal die, it turned into a d-20. You
        failed your freshman project</string>
    <string name="coinflip">Tap to Flip the Coin!</string>
    <string name="memecoin">The coin landed on its side, giving you no answer.</string>

    <string-array name="coin">
        <item>Heads!</item>
        <item>Tails!</item>
    </string-array>

    <!-- The  list for the normal magic 8 ball -->
    <string-array name="NormalBallArray">
        <item>It is certain</item>
        <item>It is decidedly so</item>
        <item>Without a doubt</item>
        <item>Yes, definitely</item>
        <item>You may rely on it</item>
        <item>As I see it, yes</item>
        <item>Most Likely</item>
        <item>Outlook good</item>
        <item>Yes</item>
        <item>Signs point to yes</item>
        <item>Reply hazy try again</item>
        <item>Ask again later</item>
        <item>Better not tell you now</item>
        <item>Cannot predict now</item>
        <item>Concentrate and ask again</item>
        <item>Don't count on it</item>
        <item>My reply is no</item>
        <item>My sources say no</item>
        <item>Outlook not so good</item>
        <item>Very doubtful</item>
    </string-array>

    <!-- The list for the Meme Magic 8 Ball -->
    <string-array name="MemeBallArray">
        <item>Probably </item>
        <item>Maybe</item>
        <item>Meh</item>
        <item>If you desire</item>
        <item>Concentrate and ask again</item>
        <item>Your choice</item>
    </string-array>

</resources>
